--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
-    "expo": "~54.0.10",
-    "expo-dev-client": "^6.0.12",
+    "expo": "54.0.12",
+    "expo-dev-client": "~6.0.13",
     "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
