Fix GitHub Actions workflow - update to use Node 20 and modern Expo setup

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -19,26 +19,35 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
-    - name: Setup Expo
+    - name: Setup Expo and EAS
       uses: expo/expo-github-action@v8
       with:
         expo-version: latest
         eas-version: latest
+        token: ${{ secrets.EXPO_TOKEN }}
         
     - name: Install dependencies
       run: npm ci
       
     - name: Initialize EAS project
-      run: |
-        echo "Y" | eas init --non-interactive || true
+      run: eas init --non-interactive
+      env:
+        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
         
     - name: Build iOS app (Development)
       run: eas build --platform ios --profile development --non-interactive
       env:
         EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+        
+    - name: Download build artifacts
+      run: |
+        # Get the latest build info
+        BUILD_ID=$(eas build:list --platform=ios --limit=1 --json | jq -r '.[0].id')
+        echo "Downloading build: $BUILD_ID"
+        eas build:download $BUILD_ID
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
@@ -46,7 +55,6 @@ jobs:
         name: ios-build
         path: |
           *.ipa
-          build.log
         retention-days: 30
         
     - name: Create Release
