--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,18 +33,13 @@ jobs:
       run: npm ci
       
     - name: Initialize EAS project
-      run: |
-        export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
-        eas init --non-interactive
+      run: eas init --non-interactive
         
     - name: Build iOS app (Development)
-      run: |
-        export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
-        eas build --platform ios --profile development --non-interactive
+      run: eas build --platform ios --profile development --non-interactive
         
     - name: Download build artifacts
       run: |
-        export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
         # Get the latest build info
         BUILD_ID=$(eas build:list --platform=ios --limit=1 --json | jq -r '.[0].id')
         echo "Downloading build: $BUILD_ID"
