Add --force flag to EAS init to create new project

--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Initialize EAS project
       run: |
         echo "Initializing EAS project..."
-        eas init --non-interactive
+        eas init --non-interactive --force
         echo "EAS project initialized successfully"
         
     - name: Build iOS app (Development)
