--- a/eas.json
+++ b/eas.json
@@ -9,20 +9,23 @@
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium",
-        "simulator": false
+        "simulator": false,
+        "autoIncrement": true
       }
     },
     "preview": {
       "distribution": "internal",
       "ios": {
         "resourceClass": "m-medium",
-        "simulator": false
+        "simulator": false,
+        "autoIncrement": true
       }
     },
     "production": {
       "ios": {
         "resourceClass": "m-medium",
-        "simulator": false
+        "simulator": false,
+        "autoIncrement": true
       }
     }
   },
